FEAT: Add categories endpoint (#27)
